--- a/데이터분석/05_텍스트_01_단어집.ipynb
+++ b/데이터분석/05_텍스트_01_단어집.ipynb
@@ -5978,10 +5978,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "word = 'korea'\n",
+    "id = voca[word]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([   52,   217,   565,   669,   991,  1250,  2514,  2608,  3001,\n",
+       "        3102,  3690,  3923,  4059,  4795,  5060,  5389,  5841,  6456,\n",
+       "        7150,  7211,  7324,  7563,  7670,  8120,  8186,  8978,  9160,\n",
+       "        9396, 11087, 12760, 13154, 15486, 16775, 16990, 17075, 17499,\n",
+       "       19444, 19905, 21025, 22301, 24376], dtype=int64)"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rows = np.where(X_train[:,id].toarray()>0)[0]\n",
+    "rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 0, 0, 0, 1, 0, 0,\n",
+       "       1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 0, 0, 1, 0, 1])"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train[rows]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([16, 25], dtype=int64)"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.bincount(y_train[rows])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6097560975609756"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train[rows].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"This is a story about Shin-ae, who moves to Milyang from Seoul with her young son Jun to start over after the accidental death of her husband. Her husband was born here, and she is opening up a piano school, but also has ambitions to own some land with the insurance money she received from the death. If that is what the film was about, it probably would have been like a Hollywood film, with her falling for some local guy and being happy with her son in their new home. But, this is not Hollywood. Her son gets kidnapped and murdered, ostensibly because it is known she has cash from the settlement. The grief process, attempts at moving on, attempts to clear her conscience of guilt, are all done admirably, and the lead actress is superb. The only caveat, and it has to be stated, is that this is a depressing film. You have to know that going in. You want Shin-ae to go through her grief and find some measure of happiness. Again, this is not Hollywood, it is Korea and in Korean cinema, especially drama, they pull no punches. Life is what happens to you. Great acting, but sometimes a tough film to watch, due to the goings on. If you stay, you'll be rewarded. Do that.\""
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text_train[217]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -6695,6 +6806,59 @@
    "source": [
     "help(CountVectorizer)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CountVectorizer(analyzer='word', binary=False, decode_error='strict',\n",
+       "        dtype=<class 'numpy.int64'>, encoding='utf-8', input='content',\n",
+       "        lowercase=True, max_df=0.2, max_features=None, min_df=5,\n",
+       "        ngram_range=(1, 1), preprocessor=None, stop_words='english',\n",
+       "        strip_accents=None, token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
+       "        tokenizer=None, vocabulary=None)"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vect2 = CountVectorizer(min_df=5, max_df=0.2, stop_words='english')\n",
+    "vect2.fit(text_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26938"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(vect2.vocabulary_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
